[package]
name = "cosmic-launcher"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"

[features]
default = []
wgpu = ["libcosmic/wgpu"]
console = ["tokio/tracing"]

[dependencies]
console-subscriber = "0.4.1"
freedesktop-icons = { package = "cosmic-freedesktop-icons", git = "https://github.com/pop-os/freedesktop-icons" }
futures = "0.3.31"
i18n-embed = { version = "0.15.3", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.3"
libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
    "autosize",
    "winit",
    "multi-window",
    "wayland",
    "tokio",
    "single-instance",
    "dbus-config",
    "desktop-systemd-scope",
    "xdg-portal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
] }
tracing-journald = "0.3.1"
tokio-stream = "0.1.17"
nix = { version = "0.29.0", features = ["process"] }
once_cell = "1.20"
pop-launcher = { git = "https://github.com/pop-os/launcher/" }
pop-launcher-service = { git = "https://github.com/pop-os/launcher/" }
pretty_env_logger = "0.5"
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shlex = "1.3.0"
tokio = { version = "1.43.0", features = ["sync", "rt"] }
xdg = "2.5.2"
clap = { version = "4.5.30", features = ["derive"] }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
zbus = { version = "4.0", default-features = false, features = ["tokio"] }
unicode-truncate = "2.0.0"
unicode-width = "0.2.0"

# [patch."https://github.com/pop-os/launcher/"]
# pop-launcher = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
# pop-launcher-service = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
