[package]
name = "cosmic-launcher"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2024"

[features]
default = []
wgpu = ["libcosmic/wgpu"]
console = ["tokio/tracing"]

[dependencies]
console-subscriber = "0.4.1"
futures = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
    "autosize",
    "dbus-config",
    "desktop",
    "winit",
    "multi-window",
    "wayland",
    "tokio",
    "single-instance",
    "desktop-systemd-scope",
    "xdg-portal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
] }
tracing-journald = "0.3.1"
tokio-stream = "0.1.17"
nix = { version = "0.30.1", features = ["process"] }
pop-launcher = { git = "https://github.com/pop-os/launcher/" }
pop-launcher-service = { git = "https://github.com/pop-os/launcher/" }
rust-embed = "8.7.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["sync", "rt"] }
clap = { version = "4.5.48", features = ["derive"] }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
zbus = { version = "5.11", default-features = false, features = ["tokio"] }
unicode-truncate = "2.0.0"
unicode-width = "0.2.1"
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../../cosmic/libcosmic" }
# cosmic-config = { path = "../../cosmic/libcosmic/cosmic-config" }
# cosmic-theme = { path = "../../cosmic/libcosmic/cosmic-theme" }
# [patch."https://github.com/pop-os/launcher/"]
# pop-launcher = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
# pop-launcher-service = { git = "https://github.com/wiiznokes/launcher/", rev = "86a54d54a68b832d404ef83a03af84cf9ef3e694" }
