[package]
name = "cosmic-launcher"
version = "1.0.3"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2024"

[features]
default = []
wgpu = ["libcosmic/wgpu"]
console = ["tokio/tracing"]

[dependencies]
console-subscriber = "0.5.0"
futures = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
    "autosize",
    "dbus-config",
    "desktop",
    "winit",
    "multi-window",
    "wayland",
    "tokio",
    "single-instance",
    "desktop-systemd-scope",
    "xdg-portal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
] }
tracing-journald = "0.3.2"
tokio-stream = "0.1.18"
nix = { version = "0.30.1", features = ["process"] }
pop-launcher = { git = "https://github.com/pop-os/launcher/" }
pop-launcher-service = { git = "https://github.com/pop-os/launcher/" }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync", "rt"] }
clap = { version = "4.5.54", features = ["derive"] }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
zbus = { version = "5.13", default-features = false, features = ["tokio"] }
unicode-truncate = "2.0.1"
unicode-width = "0.2.2"
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../../cosmic/libcosmic" }
# cosmic-config = { path = "../../cosmic/libcosmic/cosmic-config" }
# cosmic-theme = { path = "../../cosmic/libcosmic/cosmic-theme" }
