option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for Cosmic Launcher. One of "default" or "development".'
)

option(
  'vendor',
  type: 'boolean',
  value: false,
  description: 'Whether or not sources are vendored.'
)
